gccida/c2/subst
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst/src/combine.c:3804:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v25; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst/src/combine.c:3829:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v51; // [rsp+1Ch] [rbp-5Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst/src/combine.c:3832:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v54; // [rsp+28h] [rbp-50h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst/src/combine.c:3871:34: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_e( CLOBBER, ( machine_mode)BYTE2( v9), const_int_rtx[64]); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst/src/combine.c:4061:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)BYTE2( v42), 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst/src/combine.c:4063:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v8->fld[0].rtwint + 2)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst/src/combine.c:4073:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)BYTE2( v42), 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst/src/combine.c:4075:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v8->fld[0].rtwint + 2), 
  ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst/src/obj/combine.o] Error 1
